--- a/style.css
+++ b/style.css
@@ -53,10 +53,16 @@ h2 {
   animation: slideIn 1s ease-in-out;
 }
 
+/* Галерея */
+.gallery-section {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px; /* Отступы между изображениями */
+  justify-content: center;
+}
+
 .gallery-image {
-  float: left;
-  margin: 10px;
-  width: 150px;
+  width: calc(33.333% - 20px); /* Изображения занимают 1/3 ширины экрана */
   height: auto;
   transition: transform 0.3s ease;
 }
@@ -65,6 +71,13 @@ h2 {
   transform: scale(1.1);
   cursor: pointer;
 }
+
+.gallery-description {
+  text-align: center;
+  font-size: 0.9rem;
+  color: #555;
+}
+
 
 table {
   width: 100%;
